--- a/05-variables.html
+++ b/05-variables.html
@@ -31,7 +31,7 @@
   </button>
 
   <button onclick="
-  cartQuantity = cartQuantity +3;
+  cartQuantity = cartQuantity;
   console.log(`Cart quantity: ${cartQuantity}`);
   ">
     +3
