--- a/exercises/07-functions.html
+++ b/exercises/07-functions.html
@@ -10,50 +10,72 @@
       /*
       function greet(name) {
         if (!name) {
-          console.log('Hello there!');
+          console.log('Hi there!');
         } else {
-          console.log(`Hello ${name}!`);
+          console.log(`Hello! ${name}`);
         }
       }
 
-      greet("Elias");
-      greet("Simon");
+      greet('Neiwie');
+      greet('Toast');
       greet();
       */
+
       /*
-      function convertToFahrenheit(Celsius) {
-        return (Celsius*9/5)+32;
+      function convertToFahrenheit(celsius) {
+        return (celsius * 9 / 5) + 32;
       }
-
-      function convertToCelsius(Fahrenheit) {
-        return (Fahrenheit-32)*5/9;
+      
+      function convertToCelsius(fahrenheit) {
+        return (fahrenheit - 32) * 5 / 9;
       }
+      
 
-      function convertTemperatures(degrees, unit) {
+      function convertTemperature(degree, unit) {
         if (unit === 'C') {
-          return `${degrees}C`;
+          const result = convertToFahrenheit(degree);
+          return `${result}F`;
         } else if (unit === 'F') {
-          return `${degrees}F`;
+          const result = convertToCelsius(degree);
+          return `${result}C`;
         }
       }
 
-      console.log(convertTemperatures(25, 'C'));
-      console.log(convertTemperatures(86, 'F'));
+      console.log(convertTemperature(25, 'C'));
+      console.log(convertTemperature(86, 'F'));
       */
 
-      function convertLength(length, from, to,) {
-        if (from === "km" && to === "miles") {
-          return `${length / 1.6} miles`;
-        } else if (from === "miles" && to === "km") {
-          return `${length * 1.6} km`;
+      function convertLength(length, from, to) {
+        if (from !== 'km' && from !== 'miles' && from != 'ft') {
+          return`Invalid unit: ${from}`;
+        } else if (to !== 'km' && to !== 'miles' && to != 'ft') {
+          return `Invalid unit: ${to}`;
+        }
+
+        if (from === 'miles' && to === 'km') {
+          return `${length * 1.6} ${to}`;
+        } else if (from === 'km' && to === 'miles') {
+          return `${length / 1.6} ${to}`;
         } else if (from === to) {
-          return `${length} ${to}`;
+          return`${length} ${to}`;
+        } else if (from === 'miles' && to === 'ft') {
+          return `${length * 5280} ${to}`;
+        } else if (from === 'km' && to === 'ft') {
+          return `${length * 3281} ${to}`;
+        } else if (from === 'lbs' || to === 'lbs') {
+          return `Invalid unit: ${unit}`;
         }
       }
 
-      console.log(convertLength(50, "miles", "km",));
-      console.log(convertLength(32, "km", "miles",));
-      console.log(convertLength(50, "km", "km",));
+      console.log(convertLength(50, 'miles', 'km'));
+      console.log(convertLength(32, 'km', 'miles'));
+      console.log(convertLength(50, 'km', 'km'));
+
+      console.log(convertLength(5, 'miles', 'km'));
+      console.log(convertLength(5, 'miles', 'ft'));
+      console.log(convertLength(5, 'km', 'ft'));
+
+      console.log(convertLength(5, 'lbs', 'lbs'));
     </script>
   </body>
 </html>
