--- a/exercises/cart-quantity-improvement.html
+++ b/exercises/cart-quantity-improvement.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cart Quantity</title>
   </head>
   <body>
@@ -16,12 +14,7 @@
 
     <button
       onclick="
-    if (cartQuantity + 1 > 10) {
-        alert('Cart is full');
-      } else if (cartQuantity <= 10) {
-        cartQuantity ++;
-      }
-        console.log(`Cart quantity: ${cartQuantity}`);
+      updateCartQuantity(+ 1);
     "
     >
       Add to Cart
@@ -29,12 +22,7 @@
 
     <button
       onclick="
-    if (cartQuantity + 2 > 10) {
-        alert('Cart is full');
-      } else if (cartQuantity <= 10) {
-        cartQuantity += 2;
-      }
-        console.log(`Cart quantity: ${cartQuantity}`);
+      updateCartQuantity(+ 2);
     "
     >
       +2
@@ -42,12 +30,7 @@
 
     <button
       onclick="
-    if (cartQuantity + 3 > 10) {
-        alert('Cart is full');
-      } else if (cartQuantity <= 10) {
-        cartQuantity += 3;
-      }
-        console.log(`Cart quantity: ${cartQuantity}`);
+      updateCartQuantity(+ 3);
     "
     >
       +3
@@ -55,12 +38,7 @@
 
     <button
       onclick="
-    if (cartQuantity + 4 > 10) {
-      alert('Cart is full');
-      } else if (cartQuantity <= 10) {
-        cartQuantity += 4;
-      }
-        console.log(`Cart quantity: ${cartQuantity}`);
+      updateCartQuantity(+ 4)
     "
     >
       +4
@@ -68,12 +46,7 @@
 
     <button
       onclick="
-      if (cartQuantity + 5 > 10) {
-      alert('Cart is full');
-    } else if (cartQuantity <= 10) {
-      cartQuantity += 5;
-    }
-      console.log(`Cart quantity: ${cartQuantity}`);
+      updateCartQuantity(+ 5);
     "
     >
       +5
@@ -82,25 +55,15 @@
     <!-- vvv This code was changed. vvv -->
     <button
       onclick="
-    if (cartQuantity - 1 <= (-1)) {
-      alert ('Not enough items');
-    } else if (cartQuantity > 0) {
-      cartQuantity --;
-    } 
-    console.log(`Cart quantity: ${cartQuantity}`);
-      "
+      updateCartQuantity(- 1);
+    "
     >
       Remove from cart
     </button>
 
     <button
       onclick="
-      if (cartQuantity - 1 <= (-1)) {
-      alert ('Not enough items');
-    } else if (cartQuantity > 0) {
-      cartQuantity -= 2;
-    } 
-    console.log(`Cart quantity: ${cartQuantity}`);
+      updateCartquantity(- 2);
     "
     >
       -2
@@ -108,12 +71,7 @@
 
     <button
       onclick="
-      if (cartQuantity - 1 <= (-1)) {
-      alert ('Not enough items');
-    } else if (cartQuantity > 0) {
-      cartQuantity -= 3;
-    } 
-    console.log(`Cart quantity: ${cartQuantity}`);
+      updateCartQuantity(- 3);
     "
     >
       -3
@@ -130,15 +88,23 @@
       Reset Cart
     </button>
 
-    <style>
-      body {
-        line-height: 30px;
-        text-align: center;
-      }
-    </style>
-
     <script>
       let cartQuantity = 0;
+
+      function updateCartQuantity(change) {
+        if (cartQuantity + change > 10) {
+          alert('The cart is full');
+          return;
+        }
+
+        if (cartQuantity + change < 0) {
+          alert('Not enough items in the cart');
+          return;
+        }
+
+        cartQuantity += change;
+        console.log(`Cart quantity: ${cartQuantity}`);
+      }
     </script>
   </body>
 </html>
