--- a/07-rock-papers-scissors copy.html
+++ b/07-rock-papers-scissors copy.html
@@ -36,38 +36,37 @@
     <script>
       function playGame(playerMove) {
         const computerMove = pickComputerMove();
+        let result = "";
 
-        let result = '';
-
-        if (playerMove === 'Scissors') {
-          if (computerMove === 'Rock') {
-            result = 'You lose.';
-          } else if (computerMove === 'Paper') {
-            result = 'You win.';
-          } else if (computerMove === 'Scissors') {
-            result = 'Tie';
+        if (playerMove === "Scissors") {
+          if (computerMove === "Rock") {
+            result = "You lose.";
+          } else if (computerMove === "Paper") {
+            result = "You win.";
+          } else if (computerMove === "Scissors") {
+            result = "Tie";
           }
-          
-        } else if (playerMove === 'Paper') {
-            if (computerMove === 'Rock') {
-            result = 'You win.';
-          } else if (computerMove === 'Paper') {
-            result = 'Tie.';
-          } else if (computerMove === 'Scissors') {
-            result = 'You lose.';
+        } else if (playerMove === "Paper") {
+          if (computerMove === "Rock") {
+            result = "You win.";
+          } else if (computerMove === "Paper") {
+            result = "Tie.";
+          } else if (computerMove === "Scissors") {
+            result = "You lose.";
           }
-
-        } else if (playerMove === 'Rock') {
-            if (computerMove === 'Rock') {
-            result = 'Tie.';
-          } else if (computerMove === 'Paper') {
-            result = 'You lose.';
-          } else if (computerMove === 'Scissors') {
-            result === 'You win.';
+        } else if (playerMove === "Rock") {
+          if (computerMove === "Rock") {
+            result = "Tie.";
+          } else if (computerMove === "Paper") {
+            result = "You lose.";
+          } else if (computerMove === "Scissors") {
+            result === "You win.";
           }
         }
 
-        alert(`You picked ${playerMove}, Computer picked ${computerMove}. ${result}`);
+        alert(
+          `You picked ${playerMove}, Computer picked ${computerMove}. ${result}`
+        );
       }
 
       function pickComputerMove() {
