--- a/exercises/07-functions.html
+++ b/exercises/07-functions.html
@@ -6,49 +6,199 @@
     <title>Functions</title>
   </head>
   <body>
+    <p>
+      <button
+        onclick="
+        updateCalculation ('1');
+      "
+      >
+        1
+      </button>
+
+      <button
+        onclick="
+        updateCalculation('2');
+      "
+      >
+        2
+      </button>
+
+      <button
+        onclick="
+        updateCalculation('3');
+        console.log(calculation);
+      "
+      >
+        3
+      </button>
+
+      <button
+        onclick="
+        updateCalculation('+');
+      "
+      >
+        +
+      </button>
+    </p>
+
+    <p>
+      <button
+        onclick="
+        updateCalculation('4');
+      "
+      >
+        4
+      </button>
+
+      <button
+        onclick="
+        updateCalculation('5');
+      "
+      >
+        5
+      </button>
+
+      <button
+        onclick="
+        updateCalculation('6');
+      "
+      >
+        6
+      </button>
+
+      <button
+        onclick="
+        updateCalculation('-');
+      "
+      >
+        -
+      </button>
+    </p>
+
+    <p>
+      <button
+        onclick="
+        updateCalculation('7');
+      "
+      >
+        7
+      </button>
+
+      <button
+        onclick="
+        updateCalculation('8');
+      "
+      >
+        8
+      </button>
+
+      <button
+        onclick="
+        updateCalculation('9');
+      "
+      >
+        9
+      </button>
+
+      <button
+        onclick="
+        updateCalculation('*');
+      "
+      >
+        *
+      </button>
+    </p>
+
+    <p>
+      <button
+        onclick="
+        updateCalculation('0');
+      "
+      >
+        0
+      </button>
+
+      <button
+        onclick="
+        updateCalculation('.');
+      "
+      >
+        .
+      </button>
+
+      <button
+        onclick="
+        // Note: eval() takes a string and runs it as code.
+        // Avoid using eval() in real world projects since
+        // it can potentially be given harmful code to run.
+        // Only use eval() for learning purposes.
+        calculation = eval(calculation);
+        console.log(calculation);
+      "
+      >
+        =
+      </button>
+
+      <button
+        onclick="
+        updateCalculation('/');
+      "
+      >
+        /
+      </button>
+    </p>
+
+    <p>
+      <button
+        onclick="
+        calculation = '';
+      "
+      >
+        Clear
+      </button>
+    </p>
     <script>
       /*
       function greet(name) {
         if (!name) {
-          console.log('Hi there!');
+          console.log('Hi there!')
         } else {
-          console.log(`Hello! ${name}`);
+          console.log(`Hello ${name}!`);
         }
       }
 
-      greet('Neiwie');
-      greet('Toast');
+      greet('Elias');
+      greet('Simon');
       greet();
       */
-
       /*
       function convertToFahrenheit(celsius) {
         return (celsius * 9 / 5) + 32;
-      }
-      
+      }  
+      console.log(convertToFahrenheit(25));
+
       function convertToCelsius(fahrenheit) {
         return (fahrenheit - 32) * 5 / 9;
       }
-      
+      console.log(convertToCelsius(86));
 
-      function convertTemperature(degree, unit) {
+      function convertTemperatures(degrees, unit) {
         if (unit === 'C') {
-          const result = convertToFahrenheit(degree);
-          return `${result}F`;
+          const result = convertToFahrenheit(degrees);
+          return `${result}F`
         } else if (unit === 'F') {
-          const result = convertToCelsius(degree);
-          return `${result}C`;
+          const result = convertToCelsius(degrees);
+          return `${result}C`
         }
       }
-
-      console.log(convertTemperature(25, 'C'));
-      console.log(convertTemperature(86, 'F'));
+      console.log(convertTemperatures(25, 'C'));
+      console.log(convertTemperatures(86, 'F'));
       */
-
+      /*
       function convertLength(length, from, to) {
-        if (from !== 'km' && from !== 'miles' && from != 'ft') {
-          return`Invalid unit: ${from}`;
-        } else if (to !== 'km' && to !== 'miles' && to != 'ft') {
+        if (from !== 'miles' && from !== 'km' && from !== 'ft') {
+          return `Invalid unit: ${from}`;
+        } else if (to !== 'miles' && to !== 'km' && to !== 'ft') {
           return `Invalid unit: ${to}`;
         }
 
@@ -57,13 +207,11 @@
         } else if (from === 'km' && to === 'miles') {
           return `${length / 1.6} ${to}`;
         } else if (from === to) {
-          return`${length} ${to}`;
+          return `${length} ${to}`
         } else if (from === 'miles' && to === 'ft') {
           return `${length * 5280} ${to}`;
         } else if (from === 'km' && to === 'ft') {
           return `${length * 3281} ${to}`;
-        } else if (from === 'lbs' || to === 'lbs') {
-          return `Invalid unit: ${unit}`;
         }
       }
 
@@ -76,6 +224,12 @@
       console.log(convertLength(5, 'km', 'ft'));
 
       console.log(convertLength(5, 'lbs', 'lbs'));
+      */
+     let calculation = '';
+     function updateCalculation (value) {
+      calculation += value;
+      console.log(calculation);
+     }
     </script>
   </body>
 </html>
