--- a/exercises/calculator.html
+++ b/exercises/calculator.html
@@ -1,60 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>calculator</title>
-</head>
-<body>
-  <button class="buttons" onclick="
-  calculation += '1';
-  console.log(calculation);
-  ">
-    1
-  </button>
-  <button class="buttons" onclick="
-  calculation += '2';
-  console.log(calculation);
-  ">
-    2
-  </button>
-  <button class="buttons" onclick="
-  calculation += '3';
-  console.log(calculation);
-  ">
-    3
-  </button>
-  <button class="buttons" onclick="
-  calculation += ' + ';
-  console.log(calculation);
-  ">
-    +
-  </button>
-  <button class="buttons" onclick="
-  calculation = eval(calculation);
-  console.log(calculation);
-  ">
-    =
-  </button>
-  <button class="buttons" onclick="
-  calculation = '';
-  console.log(calculation);
-  ">
-    C
-  </button>
-  <style>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="calculator.css" />
+    <title>Calculator</title>
+  </head>
+  <body>
+    <div class="main-border">
+      <div class="calculator-main">
+        <div class="display"></div>
+        <div class="grid-container">
+          <div class="button-div">
+            <button
+              class="button1"
+              onclick="
+            button += '1';
+            console.log(button);
+            "
+            >
+              1
+            </button>
+            <button
+              class="button2"
+              onclick="
+          button += '2';
+          console.log(button);
+          "
+            >
+              2
+            </button>
+            <button
+              class="button3"
+              onclick="
+          button += '3';
+          console.log(button);
+          "
+            >
+              3
+            </button>
+            <button
+              class="button4"
+              onclick="
+          button += '4';
+          console.log(button);
+          "
+            >
+              4
+            </button>
+          </div>
+          <div class="button-div">
+            <button
+              class="button5"
+              onclick="
+          button += '5';
+          console.log(button);
+          "
+            >
+              5
+            </button>
+            <button
+              class="button6"
+              onclick="
+          button += '6';
+          console.log(button);
+          "
+            >
+              6
+            </button>
+            <button
+              class="button7"
+              onclick="
+          button += '7';
+          console.log(button);
+          "
+            >
+              7
+            </button>
+            <button
+              class="button8"
+              onclick="
+          button += '8';
+          console.log(button);
+          "
+            >
+              8
+            </button>
+          </div>
+          <div class="button-div">
+            <button
+              class="button9"
+              onclick="
+          button += '9';
+          console.log(button);
+          "
+            >
+              9
+            </button>
+            <button
+              class="button10"
+              onclick="
+          button += '+';
+          console.log(button);
+          "
+            >
+              +
+            </button>
+            <button
+              class="button11"
+              onclick="
+          button += '-';
+          console.log(button);
+          "
+            >
+              -
+            </button>
+            <button
+              class="button12"
+              onclick="
+          button += '*';
+          console.log(button);
+          "
+            >
+              *
+            </button>
+          </div>
+          <div class="button-div2">
+            <button
+              class="button13"
+              onclick="
+          button += '/';
+          console.log(button);
+          "
+            >
+              /
+            </button>
+            <button
+              class="button14"
+              onclick="
+          console.log(eval(button));
+          "
+            >
+              =
+            </button>
+            <button
+              class="button15"
+              onclick="
+          button = '';
+          console.log(button);
+          "
+            >
+              C
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
 
-    body {
-      text-align: center;
-    }
-
-    .buttons {
-      height: 150px;
-      width: 150px;
-    }
-  </style>
-  <script>
-    let calculation = '';
-  </script>
-</body>
+    <script>
+      let button = "";
+    </script>
+  </body>
 </html>
